# alloy

./: .gitignore  AGENTS.md  LICENSE  PERFORMANCE_PLAN.md  README.md  components.json  index.html  opencode.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
doc/: PLAN-phase2-workspace.md  PLAN-phase3-advanced-requests.md  PLAN-phase4-polish.md  PLAN.md
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: environment.rs  history.rs  http.rs  import_export.rs  mod.rs  workspace.rs
src-tauri/src/environment/: config.rs  mod.rs  resolver.rs  types.rs
src-tauri/src/history/: db.rs  types.rs
src-tauri/src/http/: client.rs  types.rs
src-tauri/src/import_export/: curl.rs  mod.rs  openapi.rs  postman.rs
src-tauri/src/scripting/: engine.rs  mod.rs  types.rs
src-tauri/src/workspace/: folder_config.rs  fs.rs  mod.rs  parser.rs  serializer.rs  types.rs
src/components/: ErrorBoundary.tsx
src/components/environment/: EnvironmentEditor.tsx  EnvironmentSelector.tsx
src/components/folder/: FolderPropertiesPanel.tsx
src/components/layout/: Sidebar.tsx  (+5 more)
src/hooks/: useActiveTab.ts  useEnvironmentVariables.ts  useEnvironments.ts  useFileTree.ts  useKeyboardShortcuts.ts  useShortcuts.ts
src/lib/: api.ts  constants.ts  format.ts  json-path.ts  path.ts  shortcuts.ts
src/stores/: request-selectors.ts  request-store.ts  theme-store.ts  workspace-store.ts
(+58 files in other folders)
