[package]
name = "alloy"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "alloy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
taurpc = "0.7"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }
reqwest = { version = "0.12", features = ["json", "multipart", "cookies", "rustls-tls"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
rest_parser = "0.1"
handlebars = "6"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
url = "2"
boa_engine = "0.21"
boa_gc = "0.21"
boa_runtime = "0.21"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
panic = "abort"
